add user form & refactor all

--- a/src/components/_Layout/Header/Header.scss
+++ b/src/components/_Layout/Header/Header.scss
@@ -6,7 +6,7 @@ header {
   .logo {
     width: 150px;
     height: 70px;
-    background: url('../../../assets/logo1.png') no-repeat center center;
+    background: url('../../../assets/logo.png') no-repeat center center;
     background-size: contain;
     cursor: pointer;
   }
