--- a/src/components/_Layout/Main/Main.scss
+++ b/src/components/_Layout/Main/Main.scss
@@ -1,3 +1,11 @@
 main {
   padding: 30px 0;
+
+  .main-container {
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
