--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,15 @@
 header,
 main,
 footer {
-  width: 70%;
+  width: 55%;
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
+}
+
+@media only screen and (max-width: 800px) {
+  header,
+  main,
+  footer {
+    width: 95%;
+  }
 }
