--- a/src/components/MainForm/Calculator/Calculator.scss
+++ b/src/components/MainForm/Calculator/Calculator.scss
@@ -2,9 +2,9 @@
   align-items: flex-end;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 
   &_sum {
-    margin-top: 10px;
     font-size: 18px;
     font-weight: 600;
 
