--- a/src/components/MainForm/Calculator/Slider/Slider.scss
+++ b/src/components/MainForm/Calculator/Slider/Slider.scss
@@ -1,24 +1,19 @@
+@import '../../../../index';
+
 .slider {
   width: 100%;
 
   &_name {
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-
-    &-icon {
-      font-size: 14px;
-      cursor: pointer;
-    }
+    @include label;
   }
 
   &_form {
     display: flex;
+    justify-content: space-between;
   }
 
   &_slider {
-    width: 85%;
+    width: 83%;
   }
 
   &_input {
