--- a/src/components/MainForm/Calculator/TextArea/TextArea.scss
+++ b/src/components/MainForm/Calculator/TextArea/TextArea.scss
@@ -1,11 +1,10 @@
+@import '../../../../index';
+
 .text-area {
   width: 100%;
 
   &_label {
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    @include label;
 
     &-icon {
       font-size: 14px;
