--- a/src/components/MainForm/UserForm/UserForm.scss
+++ b/src/components/MainForm/UserForm/UserForm.scss
@@ -1,3 +1,5 @@
+@import '../../../index';
+
 .user-form {
   display: flex;
   flex-direction: column;
@@ -9,10 +11,10 @@
   }
 
   &_label {
-    text-align: justify;
+    @include label;
 
     span {
-      font-weight: 700;
+      font-weight: 500;
     }
   }
 
