--- a/src/components/_Layout/Footer/Footer.scss
+++ b/src/components/_Layout/Footer/Footer.scss
@@ -1,4 +1,10 @@
 footer {
   font-size: 11px;
   text-align: center;
+
+  a {
+    margin-left: 3px;
+    color: #d4d4d4;
+    text-decoration: underline;
+  }
 }
