--- a/src/components/_Layout/Header/Header.scss
+++ b/src/components/_Layout/Header/Header.scss
@@ -1,12 +1,17 @@
 header {
   display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
+  align-items: center;
+
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   .logo {
-    width: 150px;
-    height: 70px;
-    background: url('../../../assets/logo.png') no-repeat center center;
+    width: 170px;
+    height: 50px;
+    background: url('../../../assets/new_logo.svg') no-repeat center center;
     background-size: contain;
     cursor: pointer;
   }
@@ -14,9 +19,6 @@ header {
   .info {
     height: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
     gap: 5px;
 
 
@@ -27,18 +29,27 @@ header {
     }
 
     &_icon {
-      fill: #2e2f2e;
+      fill: #d4d4d4;
       cursor: pointer;
       transition: 0.3s;
 
       &:hover {
-        fill: #5d5d5d;
         transform: translateY(-1px);
       }
     }
 
     &_tel {
-      font-weight: 700;
+      font-size: 16px;
+      color: #d4d4d4;
+      font-weight: 500;
     }
   }
+}
+
+@media only screen and (max-width: 800px) {
+  header {
+    //padding: 100px 0;
+  }
+
+
 }
