--- a/src/components/MainForm/UserForm/UserForm.scss
+++ b/src/components/MainForm/UserForm/UserForm.scss
@@ -7,11 +7,12 @@
   &_inputs {
     margin-bottom: 5px;
     display: flex;
-    gap: 10px;
+    gap: 5px;
   }
 
   &_label {
     @include label;
+    margin-bottom: 5px;
 
     span {
       font-weight: 500;
