--- a/src/index.scss
+++ b/src/index.scss
@@ -16,9 +16,9 @@ footer {
 }
 
 @mixin label {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 300;
-  text-align: justify;
+  line-height: 18px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -42,7 +42,7 @@ footer {
     font-size: 16px;
 
     span {
-      font-size: 26px;
+      font-size: 28px;
     }
   }
 }
