--- a/src/index.scss
+++ b/src/index.scss
@@ -3,14 +3,16 @@
 
 header,
 main,
-footer {
+footer,
+.calc,
+.examples {
   width: 100%;
   margin: 0 auto;
   font-family: 'Roboto', sans-serif;
   color: #d4d4d4;
 }
 
-.main-container {
+.container {
   width: 55%;
   margin: 0 auto;
 }
@@ -22,7 +24,7 @@ footer {
 }
 
 @media only screen and (max-width: 800px) {
-  .main-container {
+  .container {
     width: 95%;
   }
 
