--- a/src/components/_Layout/Examples/Examples.scss
+++ b/src/components/_Layout/Examples/Examples.scss
@@ -3,20 +3,6 @@
   width: 100%;
   overflow: hidden;
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('../../../assets/background.jpeg') no-repeat center top;
-    background-size: cover;
-    position: absolute;
-    transform: scale(1.05);
-    filter: blur(5px);
-  }
-
   &__container {
     display: flex;
     text-align: center;
@@ -46,7 +32,7 @@
 
   .info {
     position: relative;
-    padding: 30px;
+    padding: 30px 30px 0px;
     justify-self: end;
   }
 }
@@ -54,7 +40,7 @@
 @media only screen and (max-width: 800px) {
   .examples {
     &__container {
-      padding: 30px 20px;
+      padding: 30px 20px 0px;
       padding-top: calc((100vh - 500px) / 2);
     }
   }
