--- a/src/components/_Layout/Examples/Examples.scss
+++ b/src/components/_Layout/Examples/Examples.scss
@@ -32,7 +32,7 @@
 
   .info {
     position: relative;
-    padding: 30px 30px 0px;
+    padding: 30px;
     justify-self: end;
   }
 }
@@ -40,7 +40,7 @@
 @media only screen and (max-width: 800px) {
   .examples {
     &__container {
-      padding: 30px 20px 0px;
+      padding: 30px 20px 20px;
       padding-top: calc((100vh - 500px) / 2);
     }
   }
