--- a/src/components/_Layout/Layout.scss
+++ b/src/components/_Layout/Layout.scss
@@ -3,11 +3,12 @@
 
   &::before {
     content: '';
-    position: absolute;
+    position: fixed;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../../assets/background.jpeg') top / cover no-repeat;
+    background: url('../../assets/background.jpeg') no-repeat center top;
+    background-size: cover;
     transform: scale(1.03);
     filter: blur(3px);
   }
