--- a/src/components/_Layout/Calculator/Calculator.scss
+++ b/src/components/_Layout/Calculator/Calculator.scss
@@ -1,7 +1,24 @@
+@import '../../../assets/scss/index.scss';
+
 .calc {
-  padding: 65px 0 15px;
+  padding: 15px 0;
   min-height: 100vh;
   display: grid;
   grid-template-rows: 70px 1fr 20px;
   position: relative;
+
+  &__container {
+    padding: 100px 50px 50px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .calc {
+    display: flex;
+
+    &__container {
+      padding: 100px 0 0;
+      display: flex;
+    }
+  }
 }
