--- a/src/components/_Layout/Header/Header.scss
+++ b/src/components/_Layout/Header/Header.scss
@@ -1,21 +1,150 @@
-header {
+@import '../../../assets/scss/index.scss';
+
+.header {
   display: flex;
   align-items: center;
-  position: relative;
-  z-index: 2;
-  padding-top: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 70px;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  padding: 15px 0;
+  transition: background-color 0.3s ease;
 
-  .header-container {
+  &-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
-  .logo {
+  &-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  &-list {
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+
+    &__link {
+      color: #d4d4d4;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      transition: color 0.3s;
+
+      &:hover {
+        color: #6e6968;
+      }
+
+      &:active {
+        color: #474140;
+      }
+    }
+  }
+
+  &-logo {
     width: 170px;
     height: 50px;
-    background: url('../../../assets/new_logo.svg') no-repeat center center;
+    background: url('../../../assets/images/new_logo.svg') no-repeat center
+      center;
     background-size: contain;
     cursor: pointer;
+    z-index: 2;
+  }
+}
+
+.burger-icon {
+  display: none;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.menu-open .header-container {
+  position: relative;
+  z-index: 1100;
+}
+
+@media (max-width: 1023px) and (min-width: 769px) {
+  .header {
+    &-list {
+      width: 300px;
+      padding: 0 20px;
+    }
+
+    .info {
+      flex-wrap: wrap;
+
+      &_tel {
+        font-size: 14px;
+      }
+
+      &_icon {
+        svg {
+          width: 14px;
+          height: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 80px;
+
+    &.open {
+      background-color: rgb(103, 101, 98);
+      transition: background-color 0.3s ease;
+    }
+
+    &-container {
+      align-items: start;
+    }
+
+    &-nav {
+      position: absolute;
+      top: 0px;
+      left: 0;
+      width: 100%;
+      height: 0;
+      background-color: rgb(103, 101, 98);
+      backdrop-filter: blur(10px);
+      overflow: hidden;
+      transition: opacity 0.3s ease-out, height 0.3s ease-in;
+
+      &.open {
+        height: 300px;
+        transition: opacity 0.3s ease-in, height 0.3s ease-out;
+        padding-top: 50px;
+      }
+    }
+
+    &-list {
+      flex-direction: column;
+      gap: 15px;
+      margin: 20px auto 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .info {
+      display: none;
+    }
+  }
+
+  .burger-icon {
+    display: flex;
+    position: absolute;
+    right: 20px;
+    top: 28px;
   }
 }
