--- a/src/components/_Layout/Info/Info.scss
+++ b/src/components/_Layout/Info/Info.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/scss/index.scss';
+
 .info {
   height: 100%;
   display: flex;
@@ -23,5 +25,18 @@
     font-size: 16px;
     color: #d4d4d4;
     font-weight: 500;
+  }
+}
+
+@media (max-width: 768px) {
+  .info {
+    &_tel {
+      font-size: 14px;
+    }
+
+    &_icon {
+      width: 18px;
+      height: 18px;
+    }
   }
 }
