--- a/src/components/_Layout/Layout.scss
+++ b/src/components/_Layout/Layout.scss
@@ -1,5 +1,9 @@
+@import '../../assets/scss/index.scss';
+
 .layout {
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   &::before {
     content: '';
@@ -7,7 +11,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../../assets/background.jpeg') no-repeat center top;
+    background: url('../../assets/images/background.avif') no-repeat center top;
     background-size: cover;
     transform: scale(1.03);
     filter: blur(3px);
