--- a/src/components/_Layout/Work/Steps/Steps.scss
+++ b/src/components/_Layout/Work/Steps/Steps.scss
@@ -5,12 +5,12 @@
   flex-wrap: wrap;
   gap: 50px;
 
-  &__item {
+  &__item.ant-steps-item {
     flex: 1 1 33%;
     padding-left: 0;
   }
 
-  &__icon {
+  &__icon.anticon {
     color: black;
   }
 
