--- a/src/components/_Layout/Examples/Examples.scss
+++ b/src/components/_Layout/Examples/Examples.scss
@@ -10,7 +10,7 @@
     text-align: center;
     flex-direction: column;
     padding: 100px 20px 0px;
-    height: 100vh;
+    height: 100%;
     width: 60%;
     margin: 0 auto;
   }
