--- a/src/components/_Layout/Examples/CarouselWithThumbnails/CarouselWithThumbnails.scss
+++ b/src/components/_Layout/Examples/CarouselWithThumbnails/CarouselWithThumbnails.scss
@@ -9,8 +9,8 @@
 .carousel {
   &__img {
     width: 100%;
-    height: auto;
     border-radius: 5px;
+    height: 500px;
   }
 }
 
@@ -22,12 +22,15 @@
     justify-content: center;
   }
 
-  &__img {
+  &__img,
+  &__img.ant-image-img {
     object-fit: cover;
     cursor: pointer;
     border-radius: 5px;
-    max-width: 120px;
+    width: 80px;
+    height: 65px;
     border: 2px solid #d4d4d4;
+    background-color: black;
 
     &:hover {
       box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.6);
@@ -41,7 +44,22 @@
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  .row {
+    &__img,
+    &__img.ant-image-img {
+      width: 65px;
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) {
+  .row {
+    &__wrapper {
+      padding: 0;
+    }
+  }
+
   .carousel {
     &__img {
       max-width: calc(100vw - 40px);
